--- a/config.template.yaml
+++ b/config.template.yaml
@@ -3,3 +3,7 @@ vi_account_id: "YOUR ACCOUNT ID"
 vi_subscription_key: "YOUR SUBSCRIPTION KEY"
 face_service_endpoint: "YOUR FACE SERVICE ENDPOINT"
 face_service_key: "YOUR FACE SERVICE KEY"
+endpoint: "ENTER PREDICTION ENDPOINT HERE"
+prediction_key: "ENTER PREDICTION KEY HERE"
+project_id: "YOUR PROJECT ID"
+publish_iteration_name: "YOUR ITERATION NAME"
